--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,12 @@
 body {
     background-color: blanchedalmond;
+    text-align: center;
+    font-family: Arial;
+    text-transform: capitalize;
+}
+p {
+    display: flex;
+    justify-content: space-around;
 }
 ul {
     display: flex;
@@ -25,7 +32,7 @@ img {
     width: 100%;
 }
 
-p {
+li p {
     font-size: .6em;
     margin: 0;
 }
