--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blanchedalmond;
+    background-color: rgb(82, 82, 82);
     text-align: center;
     font-family: Arial;
     text-transform: capitalize;
@@ -22,13 +22,17 @@ ul {
 li {
     width: 110px;
     display: inline-flex;
-    border: 1px solid black;
+    border: 2px solid gold;
     border-radius: 3px;
     margin: 5px;
+    padding: 5px;
     text-align: center;
     height: 160px;
     flex-flow: column wrap;
     justify-content: space-between;
+}
+li:hover {
+    box-shadow: 0px 0 10px 5px steelblue;
 }
 
 h2 {
